# ipc.25-07

./: GeoLocator.cpp  README.md
IP_GEOLOCATION_PROJECT/: CMakeLists.txt
IP_GEOLOCATION_PROJECT/include/ip_geolocation/: geolocation.hpp  ip_geolocation_export.h
IP_GEOLOCATION_PROJECT/src/: geolocation.cpp  main.cpp
IP_GEOLOCATION_PROJECT/src/platform/: platform_utils.cpp  platform_utils.hpp
eyrwer/: GeoLocationData.cpp  wjhdfuei.cpp
src/: ConfigManager.h  GeoLocator.h  Location.cpp  Location.h  TerminalDisplay.h  ДашаLocation.cpp  ДашаLocation.h  НастяHttp.cpp  НастяHttp.h  Никита-Unit tests  НикитаUtils.cpp  НикитаUtils.h  ЮляConfig.cpp  ЮляConfig.h
